--- a/config/package.json
+++ b/config/package.json
@@ -18,7 +18,9 @@
     "./dist-esm",
     "./dist-cjs",
     "README.md",
-    "LICENSE.txt"
+    "LICENSE.txt",
+    "string",
+    "maybe-file"
   ],
   "type": "module",
   "main": "./dist-cjs/index.js",
